docker buildx bugs fixed

--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -154,7 +154,14 @@ app_security:
       fi
     - docker-compose version
     - if ! docker buildx version &> /dev/null; then
-        docker buildx create --use;
+        mkdir -p ~/.docker/cli-plugins
+        curl -sSL https://github.com/docker/buildx/releases/latest/download/buildx-$(uname -s)-$(uname -m) \
+          -o ~/.docker/cli-plugins/docker-buildx
+        chmod +x ~/.docker/cli-plugins/docker-buildx;
+      fi
+    - if ! docker buildx inspect mybuilder &>/dev/null; then
+       docker buildx create --name mybuilder
+       docker buildx inspect mybuilder --bootstrap;
       fi
     - docker-compose version
     - docker buildx version
