--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -153,13 +153,14 @@ app_security:
          sudo apt-get install docker-compose -y && sudo apt-get update -y;
       fi
     - docker-compose version
+    - apk add --no-cache bash curl coreutils
     - if ! docker buildx version &> /dev/null; then \
         mkdir -p ~/.docker/cli-plugins && \
         curl -sSL "https://github.com/docker/buildx/releases/latest/download/buildx-$(uname -s)-$(uname -m)" -o ~/.docker/cli-plugins/docker-buildx && \
         chmod +x ~/.docker/cli-plugins/docker-buildx; 
       fi
     - if ! docker buildx inspect mybuilder &>/dev/null; then
-       docker buildx create --name mybuilder && \
+       docker buildx create mybuilder && \
        docker buildx inspect mybuilder --bootstrap; 
       fi
     - docker-compose version
