--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -140,14 +140,15 @@ deploy_prod:
 app_security:
   stage: deploy_prod
   tags: 
-    - runner_fastapi_project
+    - runner_fastapi_project # a shell runner to run this job
   image: docker:27-cli
   before_script:
     - echo "Preparing Traefik certificate folder..."
     - mkdir -p /home/gitlab-runner/traefik-public-certificates
-    - touch /home/gitlab-runner/traefik-public-certificates/acme.json
-    - chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
+    - sudo chown -R gitlab-runner:gitlab-runner /home/gitlab-runner/traefik-public-certificates
     - chmod 700 /home/gitlab-runner/traefik-public-certificates
+    - sudo touch /home/gitlab-runner/traefik-public-certificates/acme.json
+    - sudo chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
     - ls -l /home/gitlab-runner/traefik-public-certificates
     - nano /home/gitlab-runner/traefik-public-certificates/acme.json
     - echo "Installing dependencies"
