--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -150,7 +150,7 @@ app_security:
     - sudo touch /home/gitlab-runner/traefik-public-certificates/acme.json
     - sudo chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
     - ls -l /home/gitlab-runner/traefik-public-certificates
-    - nano /home/gitlab-runner/traefik-public-certificates/acme.json
+    - cat /home/gitlab-runner/traefik-public-certificates/acme.json
     - echo "Installing dependencies"
     - if ! command -v docker-compose &> /dev/null; then
          sudo apt-get install docker-compose -y && sudo apt-get update -y;
@@ -200,7 +200,7 @@ app_security:
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml config > /tmp/merged.yml
-    - nano /tmp/merged.yml
+    - cat /tmp/merged.yml
     - CID=docker-compose -f docker-compose.yml -f docker-compose.override.yml ps -q traefik
     - docker inspect --format '{{range $k,$v := .Config.Labels}}{{$k}}={{$v}};{{end}}' $CID
     - sleep 20
