--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -157,15 +157,6 @@ app_security:
       fi
     - docker-compose version
     - sudo apt-get install -y bash curl coreutils
-    #- if ! docker buildx version &> /dev/null; then \
-    #    mkdir -p ~/.docker/cli-plugins && \
-    #    curl -sSL "https://github.com/docker/buildx/releases/latest/download/buildx-$(uname -s)-$(uname -m)" -o ~/.docker/cli-plugins/docker-buildx && \
-    #    chmod +x ~/.docker/cli-plugins/docker-buildx; 
-    #  fi
-    #- if ! docker buildx inspect mybuilder &>/dev/null; then
-    #   docker buildx create mybuilder && \
-    #   docker buildx inspect mybuilder --bootstrap; 
-    #  fi
     - docker-compose -f docker-compose.prod.yml down
   script:
     - echo "Deploying to Production (host Docker)"
@@ -201,7 +192,7 @@ app_security:
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml config > /tmp/merged.yml
     - cat /tmp/merged.yml
-    - CID=docker-compose -f docker-compose.yml -f docker-compose.override.yml ps -q traefik
+    - CID=$(docker-compose -f docker-compose.yml -f docker-compose.override.yml ps -q traefik)
     - docker inspect --format '{{range $k,$v := .Config.Labels}}{{$k}}={{$v}};{{end}}' $CID
     - sleep 20
     - docker-compose ps
