--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -163,7 +163,7 @@ app_security:
   script:
     - echo "Deploying to Production (host Docker)"
     - |
-      cat > docker-compose.override.yml <<EOF
+      cat > docker-compose.override.yml <<'EOF'
       services:
         traefik:
           ports:
