--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -150,6 +150,7 @@ app_security:
     - chmod 700 /home/gitlab-runner/traefik-public-certificates
     - sudo touch /home/gitlab-runner/traefik-public-certificates/acme.json
     - sudo chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
+    - sudo chown 65532:65532 /home/gitlab-runner/traefik-public-certificates/acme.json
     - ls -l /home/gitlab-runner/traefik-public-certificates
     - cat /home/gitlab-runner/traefik-public-certificates/acme.json
     - echo "Installing dependencies"
