--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -50,7 +50,8 @@ services:
       - 443:443 # HTTPS
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./traefik-public-certificates:/certificates"   
+      #- "./traefik-public-certificates:/certificates"   
+      - "/home/gitlab-runner/traefik-public-certificates:/letsencrypt"
     command:
       # Enable Docker as a provider
       - "--providers.docker=true"
