--- a/traefik.prod.toml
+++ b/traefik.prod.toml
@@ -20,7 +20,7 @@ dashboard = true
     exposedByDefault = false
 
 [certificatesResolvers.letsencrypt.acme]
-  email = "your@email.com"
-  storage = "/certificates/acme.json"
+  email = "tsamosarial@yahoo.fr"
+  storage = "/letsencrypt/acme.json"
   [certificatesResolvers.letsencrypt.acme.httpChallenge]
     entryPoint = "web"
