--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -67,8 +67,9 @@ services:
       #- "--entrypoints.web.http.redirections.entrypoint.scheme=https"
 
       # TLS certificate resolver
-      - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
-      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
+      #- "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
+      #- "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.letsencrypt.acme.dnschallenge=true"
       - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudns"
       - "--certificatesresolvers.letsencrypt.acme.email=tsamosarial@yahoo.fr"  
       - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
