--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -201,9 +201,9 @@ app_security:
     - docker-compose logs traefik 
     - echo "Checking HTTPS on main app route"
     - DOMAIN=fastapi-traefik.prod-fastapi.ip-ddns.com
-    - curl -vk "http://$DOMAIN" || (echo "public HTTP failed" && exit 1) || true
+    - curl -vk "http://$DOMAIN:80" || (echo "public HTTP failed" && exit 1) || true
     - curl -vk http://$DOMAIN/.well-known/acme-challenge/TEST
-    - curl -vk "https://$DOMAIN/" || (echo "public HTTPS failed" && exit 1)
+    - curl -k "https://$DOMAIN:80" || (echo "public HTTPS failed" && exit 1)
     - echo "Check SSL certificate info"
     - openssl s_client -servername "$DOMAIN" -connect "$DOMAIN:443" </dev/null 2>/dev/null | openssl x509 -noout -issuer -subject -dates
     #- curl -fsSIL -u "testuser:${DASHBOARD_PASSWORD}" "https://dashboard-fastapi-traefik.prod-fastapi.ip-ddns.com" || (echo "Dashboard failed" && exit 1)
