--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -123,7 +123,7 @@ deploy_prod:
   script:
    - echo "Deploying to Production..."
    - docker-compose -f docker-compose.prod.yml up -d --build
-    # wait for services to start
+   # wait for services to start
    - sleep 20              
    - docker-compose ps
    - docker-compose logs web
@@ -136,6 +136,41 @@ deploy_prod:
     url: https://fastapi-traefik.prod-fastapi.ip-ddns.com
   only:
     - main
+  when: manual
+
+secure_prod:
+  stage: deploy_prod
+  image: docker:lastest
+  services:
+   - docker:dind
+  before_script:
+    - mkdir -p traefik/letsencrypt
+    - touch traefik/letsencrypt/acme.json
+    - chmod 600 traefik/letsencrypt/acme.json
+  script:
+   - echo "Securing Production with HTTPS..."
+   - |
+      cat > docker-compose.override.yml <<'EOF'
+      web:
+        labels:
+          - "traefik.enable=true"
+          - "traefik.http.routers.web.rule=Host(`fastapi-traefik.prod-fastapi.ip-ddns.com`)"
+          - "traefik.http.routers.web.entrypoints=websecure"
+          - "traefik.http.routers.web.tls.certresolver=myresolver"
+          - "traefik.http.routers.web.middlewares=secure-headers"
+          - "traefik.http.routers.web-secure-redirect.entrypoints=web"
+          - "traefik.http.routers.web-secure-redirect.rule=Host(`fastapi-traefik.prod-fastapi.ip-ddns.com`)"
+          - "traefik.http.routers.web-secure-redirect.middlewares=redirect-to-https"
+   - docker-compose -f docker-compose.prod.yml up -d --build 
+   - sleep 15
+   - echo "Checking HTTPS..."
+   - curl -vk https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs || (echo "HTTPS check failed!" && exit 1)
+   - echo "HTTPS enabled and secure headers applied!"
+  environment:
+   name: Production
+   url: https://fastapi-traefik.prod-fastapi.ip-ddns.com
+  only:
+   - main
   when: manual
 
 app_security:
@@ -188,7 +223,6 @@ app_security:
             - "traefik.http.services.fastapi.loadbalancer.server.port=80"
       EOF
     - export COMPOSE_HTTP_TIMEOUT=300
-    - docker compose -f docker-compose.prod.yml -f docker-compose.override.yml pull || true
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
