--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
+    restart: always
     expose:
       - 80
     environment:
@@ -45,6 +46,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.traefik
+    restart: always
     ports:
       - 80:80   
       - 443:443 
