--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -148,7 +148,8 @@ secure_prod:
     - mkdir -p traefik/letsencrypt
     - touch traefik/letsencrypt/acme.json
     - chmod 600 traefik/letsencrypt/acme.json
-    - apk add --no-cache curl
+    - apk add --no-cache curl bash
+    - sudo lsof -i :80
   script:
     - echo "Securing Production with HTTPS..."
     - |
@@ -175,6 +176,8 @@ secure_prod:
     - curl -vk https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs || (echo "HTTPS check failed!" && exit 1)
     - openssl s_client -connect fastapi-traefik.prod-fastapi.ip-ddns.com:443 -servername fastapi-traefik.prod-fastapi.ip-ddns.com | openssl x509 -noout -issuer -subject -dates
     - curl -vkI https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs
+    - curl -vk https://fastapi-traefik.prod-fastapi.ip-ddns.com 2>&1 | grep "issuer"
+    - curl -sI https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs
     - echo "HTTPS enabled and secure headers applied!"
   environment:
    name: Production
