--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -149,7 +149,7 @@ secure_prod:
     - touch traefik/letsencrypt/acme.json
     - chmod 600 traefik/letsencrypt/acme.json
     - apk add --no-cache curl bash
-    - sudo lsof -i :80
+    #- sudo lsof -i :80
   script:
     - echo "Securing Production with HTTPS..."
     - |
