--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -23,7 +23,7 @@ update:
     paths:
       - .venv/
     expire_in: 1 hour
-  when: manual
+  # when: manual
   
 
 build:
@@ -160,7 +160,7 @@ secure_prod:
             - "traefik.enable=true"
             - "traefik.http.routers.web.rule=Host(`fastapi-traefik.prod-fastapi.ip-ddns.com`)"
             - "traefik.http.routers.web.entrypoints=websecure"
-            - "traefik.http.routers.web.tls.certresolver=myresolver"
+            - "traefik.http.routers.web.tls.certresolver=letsencrypt"
             - "traefik.http.routers.web.middlewares=secure-headers"
             - "traefik.http.routers.web-secure-redirect.entrypoints=web"
             - "traefik.http.routers.web-secure-redirect.rule=Host(`fastapi-traefik.prod-fastapi.ip-ddns.com`)"
