--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -145,9 +145,16 @@ secure_prod:
   services:
     - docker:dind
   before_script:
-    - mkdir -p traefik/letsencrypt
-    - touch traefik/letsencrypt/acme.json
-    - chmod 600 traefik/letsencrypt/acme.json
+    # - mkdir -p traefik/letsencrypt
+    # - touch traefik/letsencrypt/acme.json
+    # - chmod 600 traefik/letsencrypt/acme.json
+    # adding treafik certificate folder
+    - echo "Preparing Traefik certificate folder..."
+    - mkdir -p /home/gitlab-runner/traefik-public-certificates
+    - touch /home/gitlab-runner/traefik-public-certificates/acme.json
+    - sudo chown -R gitlab-runner:gitlab-runner /home/gitlab-runner/traefik-public-certificates
+    - chmod 700 /home/gitlab-runner/traefik-public-certificates
+    - sudo chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
     - apk add --no-cache curl bash
     #- sudo lsof -i :80
   script:
@@ -168,6 +175,8 @@ secure_prod:
       EOF
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build 
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
+    - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
+    - docker ps -a
     - sleep 20
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml config > /tmp/merged.yml
     - cat /tmp/merged.yml
