--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,9 @@ services:
       # Use Let's Encrypt resolver
       - "traefik.http.routers.fastapi.tls.certresolver=letsencrypt"
 
+      # Add entrypoint websecure for HTTPS
+      - "traefik.http.routers.fastapi.entrypoints=websecure"
+
       # Ensure traffic gets forward to the app's exposed port 80
       - "traefik.http.services.fastapi.loadbalancer.server.port=80"
 
@@ -65,8 +68,8 @@ services:
       - "--accesslog=true"
 
       # Redirect all HTTP to HTTPS
-      #- "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      #- "--entrypoints.web.http.redirections.entrypoint.scheme=https"
+      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
 
       # TLS certificate resolver
       - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
