--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -187,7 +187,7 @@ secure_prod:
     - docker-compose logs traefik | grep acme
     - echo "Test FastAPI inside the container..."
     - docker-compose exec -T web curl -f http://web:80/ || (echo "Internal health check failed!" && exit 1)
-    - docker exec -it devops-project-web-1 curl -vk http://localhost:80/docs
+    - docker exec -it web curl -vk http://web:80/docs
     - echo "Checking HTTPS..."
     - openssl s_client -connect fastapi-traefik.prod-fastapi.ip-ddns.com:443 -servername fastapi-traefik.prod-fastapi.ip-ddns.com | openssl x509 -noout -issuer -subject -dates
     - curl -vk https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs || (echo "HTTPS check failed!" && exit 1)
