--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -152,11 +152,10 @@ secure_prod:
     - echo "Preparing Traefik certificate folder..."
     - mkdir -p /home/gitlab-runner/traefik-public-certificates
     - touch /home/gitlab-runner/traefik-public-certificates/acme.json
-    #- chown -R gitlab-runner:gitlab-runner /home/gitlab-runner/traefik-public-certificates
     - chmod 700 /home/gitlab-runner/traefik-public-certificates
     - chmod 600 /home/gitlab-runner/traefik-public-certificates/acme.json
     - apk add --no-cache curl bash
-    #- sudo lsof -i :80
+    - docker-compose -f docker-compose.prod.yml down
   script:
     - echo "Securing Production with HTTPS..."
     - |
@@ -187,7 +186,7 @@ secure_prod:
     - docker-compose logs traefik | grep acme
     - echo "Test FastAPI inside the container..."
     - docker-compose exec -T web curl -f http://web:80/ || (echo "Internal health check failed!" && exit 1)
-    - docker exec -it web curl -vk http://web:80/docs
+    - docker-compose exec -it web curl -vk http://web:80/docs || (echo "Internal docs endpoint check failed!" && exit 1)
     - echo "Checking HTTPS..."
     - openssl s_client -connect fastapi-traefik.prod-fastapi.ip-ddns.com:443 -servername fastapi-traefik.prod-fastapi.ip-ddns.com | openssl x509 -noout -issuer -subject -dates
     - curl -vk https://fastapi-traefik.prod-fastapi.ip-ddns.com/docs || (echo "HTTPS check failed!" && exit 1)
