--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -174,11 +174,13 @@ secure_prod:
             - "traefik.http.services.web.loadbalancer.server.port=80"
       EOF
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml up -d --build 
-    - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
+    # - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs traefik
     - docker-compose -f docker-compose.prod.yml -f docker-compose.override.yml logs web
     - docker ps -a
     - sleep 20
     - docker-compose restart traefik
+    - docker-compose restart web
+    - docker-compose restart db
     - sleep 20
     - docker-compose ps
     - docker-compose logs traefik
